base-2/apps/api/lh-bh-assessment-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploybhassessmentapi
  labels:
    app: deploybhassessmentapi
spec:
  revisionHistoryLimit: 3
  #replicas: 2
  selector:
    matchLabels:
      app: deploybhassessmentapi
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: deploybhassessmentapi
    spec:
      containers:
      - name: lhbhassessmentapi
        image: image_url/bh-assessment-api-stage
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 512m
          requests:
            cpu: 300m
