base-2/apps/api/lh-bh-assessment-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicebhassessmentapi
spec:
  selector:
    app: deploybhassessmentapi
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31300
